starting usage of iced

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -50,8 +50,12 @@
 
   </body>
 
+
   <script src="./js/jquery.js"></script>
   <script src="./js/bullet.js"></script>
+
+  <script src="./js/coffe-script.js"></script>
+  <script type="text/coffeescript" src="./iced/tim_chat.iced"></script>
 
   <script src="./js/angular.js"></script>
   <script src="./js/angular-sanitize.js"></script>
