written on iced coffescript now

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -59,9 +59,8 @@
   <script src="./js/angular-cookies.js"></script>
   <script src="./js/bootstrap.min.js"></script>
 
-  <script src="./js/coffe-script.js"></script>
-  <script type="text/coffeescript" src="./iced/tim_chat.iced"></script>
-
-  <script src="./js/myscript.js"></script>
+  <!--script src="./js/coffe-script.js"></script-->
+  <!--script type="text/coffeescript" src="./iced/tim_chat.iced"></script-->
+  <script src="./iced/tim_chat.js"></script>
 
 </html>
