now auto compiling iced to js

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -61,6 +61,6 @@
 
   <!--script src="./js/coffe-script.js"></script-->
   <!--script type="text/coffeescript" src="./iced/tim_chat.iced"></script-->
-  <script src="./iced/tim_chat.js"></script>
+  <script src="./js/tim_chat.js"></script>
 
 </html>
